--- a/src/styles/sass/containers/Projects.module.sass
+++ b/src/styles/sass/containers/Projects.module.sass
@@ -12,3 +12,5 @@
     grid-template-columns: repeat(auto-fit, minmax(min(100%, 25rem), 1fr))
     padding: 0
     overflow: scroll
+    &::-webkit-scrollbar
+      display: none
